samples/_failures_safe/1761560251_aa48b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c8d3536.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | int main
      | ^~~
